--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,8 @@ dependencies {
             "org.junit.jupiter:junit-jupiter:5.9.0",
             "org.slf4j:slf4j-simple:$slf4jVersion",
             "io.rest-assured:rest-assured:5.2.0",
-            "com.github.javafaker:javafaker:1.0.2"
+            "com.github.javafaker:javafaker:1.0.2",
+            'org.aeonbits.owner:owner:1.0.12'
     )
 }
 
@@ -57,4 +58,7 @@ tasks.withType(Test) {
     }
 }
 
-test {}
+test {
+    useJUnitPlatform()
+    systemProperties(System.getProperties())
+}
