--- a/src/test/resources/local.properties
+++ b/src/test/resources/local.properties
@@ -1,5 +1,5 @@
-browser=chrome
-browserVersion=100.0
+browser=CHROME
+browserVersion=106.0
 browserSize=1920x1080
 baseUrl=https://demowebshop.tricentis.com/
 
