--- a/src/test/resources/local.properties
+++ b/src/test/resources/local.properties
@@ -1,7 +1,8 @@
 browser=CHROME
-browserVersion=106.0
+browserVersion=100.0
 browserSize=1920x1080
 baseUrl=https://demowebshop.tricentis.com/
 
 isRemote=false
 remoteUrl=https://demowebshop.tricentis.com/
+videoStorage=
