--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -5,3 +5,4 @@ baseUrl=https://demowebshop.tricentis.com/
 
 isRemote=true
 remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
+videoStorage=https://selenoid.autotests.cloud/video/
