--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -1,5 +1,5 @@
-browser=firefox
-browserVersion=98.0
+browser=CHROME
+browserVersion=100.0
 browserSize=1280x1024
 baseUrl=https://demowebshop.tricentis.com/
 
