--- a/src/test/resources/local.properties
+++ b/src/test/resources/local.properties
@@ -1,8 +1,8 @@
 browser=CHROME
 browserVersion=100.0
 browserSize=1920x1080
-baseUrl=https://demowebshop.tricentis.com/
+baseUrl=https://demowebshop.tricentis.com/register
 
 isRemote=false
-remoteUrl=https://demowebshop.tricentis.com/
+remoteUrl=https://demowebshop.tricentis.com/register
 videoStorage=
