--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -1,7 +1,7 @@
 browser=CHROME
 browserVersion=100.0
 browserSize=1280x1024
-baseUrl=https://demowebshop.tricentis.com/
+baseUrl=https://demowebshop.tricentis.com/register
 
 isRemote=true
 remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
